# view-sync

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  docker-compose.yaml  docker-compose.yml  flake.nix  loki-config.yaml  loki-config.yml  main.c  makefile  settings.gradle.kts  view-sync-dashboard.json
app/: build.gradle.kts
app/src/main/java/sdis/main/: App.java
app/src/main/java/sdis/transport/: SyncSocket.java
app/src/test/java/sdis/main/: AppTest.java
include/: cbcast.h  result.h  udp_sim.h  vector_clock.h  view.h
include/lib/: arena.h  stb_ds.h
src/: cbcast.c  main.c  result.c  udp_sim.c  vector_clock.c  view.c
src/cbcast/: common.c  init.c  message.c  peer.c  receive.c  receive_old.c  send.c  send_to_peer.c  statistics.c  threads.c  view_sync.c
src/lib/: arena.c
test/: test_cbcast.c  test_cbcast_receive.c  test_main.c  test_result.c  test_vector_clock.c  test_view.c
